Update Network Analysis-Naive Bayes Classifier.ipynb

--- a/Network Analysis-Naive Bayes Classifier.ipynb
+++ b/Network Analysis-Naive Bayes Classifier.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/Users/Rameez Nizar/Miniconda3/Capstone Project Data/Reviews.csv')"
+    "df = pd.read_csv('C:/Users/Rishabh/Miniconda3/Capstone Project Data/Reviews.csv')"
    ]
   },
   {
